# EvacuationC

./: .gitignore  CMakeLists.txt  README.md  evacuation_c.pyx  pyproject.toml  setup.py
.github/workflows/: build.yml
EvacuationC/: CMakeLists.txt  __init__.py  cevacuation_c.pxd  evacuation_c.pyx
src/: bim_configure.c  bim_modeling.c  bim_modeling.h  bim_polygon_tools.c  bim_tools.h  main.c  test.py
tests/: CMakeLists.txt  test_bim_evac.c  test_bim_object.c  test_bim_polygon_tools.c
